Fixed header spacing

--- a/src/components/Header/Header.styl
+++ b/src/components/Header/Header.styl
@@ -1,6 +1,9 @@
 @import "~style/common.styl"
 
 #app .header
+  display flex
+  align-items center
+  justify-content space-between
   margin-bottom .714rem
 
   .icon
